Added the import-database API command, for associating an existing un-owned database with a domain.
The Manage SSL Certificate page can now be used to copy a domain's cert and key to Dovecot or Postfix.
Script version upgrades that are completely un-supported (like Jooma 1.0 to 1.5) are now no longer displayed in Virtualmin.
Concurrent backups to the same destination are now no longer allowed, due to the potential for corruption and odd partial failures.
Added a Module Config option to always show output from pre and post virtual server creation commands.
---- Changes since 3.75 ----
Updated the Plans script installer to version 8.1.6, Wordpress to 2.8.6, Wordpress MU to 2.8.6, redmine to 0.8.7, Bugzilla to 3.4.4, Moodle to 1.9.7, Rails to 2.3.5, Trac to 0.11.6, SMF to 1.1.11, ZenPhoto to 1.2.7, phpMyAdmin to 3.2.4, SugarCRM to 5.5.0, Typo3 to 4.3.0, dotProject to 2.1.3, Plans to 8.1.8, MoinMoin to 1.8.6, and Nucleus to 3.51.
Added the --passfile flag to all domain, user, reseller and extra admin creation and modification commands, for reading the password from a file so it doesn't show up in ps output.
Added a DNS template option to control if an NS record is added for the Virtualmin system.
Disk quota monitoring now has an option to send email to mailboxes who are over quota.
When moving a virtual server, update the paths in the script logs DB to match the new location.
Backups and restores made by domain owners are now included in their bandwidth usage.
Added Module Config options to limit the number of concurrent backups, which defaults to 3. This prevents system owners from overloading the machine with their scheduled backups.
If Apache supports SNI, make the warning about clashing certs less dramatic.
When a mailbox user is created, make his spam, virus and trash directories under Maildir so that they show up in the IMAP folder list by default.